--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .nav-item{
   margin-left: 10px;
 }
+.navbar{
+  width: 100%;
+  height: 100px;
+  background-color: rgb(0, 0, 0);
+}
 .kard{
   width: 30%;
   height: auto;
