--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 .navbar{
   width: 100%;
   height: 100px;
-  background-color: rgb(0, 0, 0);
+  background-color:  #212529;
 }
 .kard{
   width: 30%;
